--- a/pro-barber/src/main/resources/application.properties
+++ b/pro-barber/src/main/resources/application.properties
@@ -1,7 +1,13 @@
+#spring.datasource.url=jdbc:h2:mem:testdb
+#spring.datasource.driverClassName=org.h2.Driver
+#spring.datasource.username=sa
+#spring.datasource.password=
+#spring.h2.console.enabled=true
+#spring.h2.console.path=/h2-console
 
 spring.datasource.url=jdbc:postgresql://localhost:5432/pro-barber-db
 spring.datasource.username=postgres
-spring.datasource.password=master
+spring.datasource.password=1428
 spring.jpa.hibernate.ddl-auto=update
 
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
