--- a/pro-barber/pom.xml
+++ b/pro-barber/pom.xml
@@ -56,6 +56,22 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+
+
+<!--		<dependency>-->
+<!--			<groupId>com.amazonaws</groupId>-->
+<!--			<artifactId>aws-java-sdk</artifactId>-->
+<!--			<version>1.12.772</version>-->
+<!--		</dependency>-->
+
+		<!-- https://mvnrepository.com/artifact/software.amazon.awssdk/aws-sdk-java -->
+		<dependency>
+			<groupId>software.amazon.awssdk</groupId>
+			<artifactId>aws-sdk-java</artifactId>
+			<version>2.28.11</version>
+		</dependency>
+
+
 	</dependencies>
 
 	<build>
